live/environments/lab/cluster/rabbitmq/3-svc-rabbitmq-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-itsys-001
  namespace: itsystems-lab
spec:
  publishNotReadyAddresses: true
  clusterIP: None
  ports:
   - name: epmd
     protocol: TCP
     port: 4369
     targetPort: 4369
   - name: amqp
     protocol: TCP
     port: 5672
     targetPort: 5672
   - name: http-mgmt
     protocol: TCP
     port: 15672
     targetPort: 15672
   - name: dist
     protocol: TCP
     port: 25672
     targetPort: 25672
  selector:
    app: rabbitmq-itsys-001
