live/environments/lab/cluster/rabbitmq/1-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbitmq-itsys-001.rabbitmq-itsys-001
  namespace: itsystems-lab
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: rabbitmq-itsys-001
    ports:
    - port: 4369
      protocol: TCP
    - port: 5672
      protocol: TCP
    - port: 15672
      protocol: TCP
    - port: 25672
      protocol: TCP
    - port: 6000
      endPort: 6500
      protocol: TCP
  podSelector:
    matchLabels:
      app: rabbitmq-itsys-001
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress.rabbitmq-itsys-001.15672
  namespace: itsystems-lab
spec:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            namespace: ingress-nginx 
        podSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
      ports:
      - port: 15672
        protocol: TCP
  podSelector:
    matchLabels:
      app: rabbitmq-itsys-001
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nodeport.rabbitmq-itsys-001
  namespace: itsystems-lab
spec:
  ingress:
  - from:
    - ipBlock:
        cidr: 10.0.0.0/8
    ports:
    - port: 5672
      protocol: TCP
  podSelector:
    matchLabels:
      app: rabbitmq-itsys-001
  policyTypes:
  - Ingress
